# synthetic_graph_benchmarks

./: .gitignore  pyproject.toml
src/synthetic_graph_benchmarks/: __init__.py  dataset.py  spectre_utils.py  utils.py
test/: test_benchmarks_run.py
